// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorFormatEditorComponent should render multiple colors 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": "Pattern (regular expression)",
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": "Text color",
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": "Background color",
          "render": [Function],
        },
        Object {
          "name": "Example",
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
        Object {
          "background": "#ffffff",
          "index": 1,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    color="primary"
    fill={false}
    iconSide="left"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="common.ui.fieldEditor.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditorComponent should render other type normally (range field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "range",
          "name": "Range (min:max)",
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": "Text color",
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": "Background color",
          "render": [Function],
        },
        Object {
          "name": "Example",
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    color="primary"
    fill={false}
    iconSide="left"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="common.ui.fieldEditor.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;

exports[`ColorFormatEditorComponent should render string type normally (regex field) 1`] = `
<Fragment>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "regex",
          "name": "Pattern (regular expression)",
          "render": [Function],
        },
        Object {
          "field": "text",
          "name": "Text color",
          "render": [Function],
        },
        Object {
          "field": "background",
          "name": "Background color",
          "render": [Function],
        },
        Object {
          "name": "Example",
          "render": [Function],
        },
        Object {
          "actions": Array [
            Object {
              "available": [Function],
              "color": "danger",
              "description": "Delete color format",
              "icon": "trash",
              "name": "Delete",
              "onClick": [Function],
              "type": "icon",
            },
          ],
        },
      ]
    }
    items={
      Array [
        Object {
          "background": "#ffffff",
          "index": 0,
          "range": "-Infinity:Infinity",
          "regex": "<insert regex>",
          "text": "#000000",
        },
      ]
    }
    noItemsMessage="No items found"
    responsive={true}
  />
  <EuiSpacer
    size="m"
  />
  <EuiButton
    color="primary"
    fill={false}
    iconSide="left"
    iconType="plusInCircle"
    onClick={[Function]}
    size="s"
    type="button"
  >
    <FormattedMessage
      defaultMessage="Add color"
      id="common.ui.fieldEditor.color.addColorButton"
      values={Object {}}
    />
  </EuiButton>
  <EuiSpacer
    size="l"
  />
</Fragment>
`;
